--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-6">
                         <div class="text-center text-white">
-                            <container><image src="assets/img/logo.png" style="height: 17rem; margin-bottom: 2rem"></image></container>
+                            <container>
+                                <div class="logo"><image src="assets/img/logo.png" style="height: 17rem; margin-bottom: 2rem"></image></div>
+                            </container>
                             <!-- Page heading-->
                             <h1 class="mb-5">Transparencia y control para tu negocio de cannabis</h1>
                             <!-- Signup form-->
@@ -48,7 +50,7 @@
                                 <!-- This is what your users will see when the form-->
                                 <!-- has successfully submitted-->
                                 <div class="d-none" id="submitSuccessMessage">
-                                    <div class="text-center mb-3"><div class="fw-bolder">Perfecto! Estaremos en contacto pronto</div></div>
+                                    <div class="text-center mb-3"><div class="fw-bolder">Perfecto! Estaremos en contacto contigo próximamente.</div></div>
                                 </div>
                                 <!-- Submit error message-->
                                 <!---->
