Add verified page

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
+        <!-- Form behavior-->
+        <script src="js/form.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
