Add verify error page

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Agiliza el registro de trabajo en interior y exterior</h2>
-                        <p class="lead mb-0">Imprime el código de tus plantas y lotes, ubícalo en el invernadero o plantación para poder escanearlo cuando necesites obtener información y registrar acciones.</p>
+                        <p class="lead mb-0">Ubica el código QR de tus plantas y lotes en el invernadero o plantación para poder escanearlo cuando necesites obtener información y registrar acciones.</p>
                     </div>
                 </div>
                 <div class="row g-0">
