Remove email capture and just leave the Android app download link

--- a/index.html
+++ b/index.html
@@ -27,38 +27,10 @@
                             </container>
                             <!-- Page heading-->
                             <h1 class="mb-5">Transparencia y control para tu negocio de cannabis</h1>
-                            <!-- Signup form-->
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- * * SB Forms Contact Form * *-->
-                            <!-- * * * * * * * * * * * * * * *-->
-                            <!-- This form is pre-integrated with SB Forms.-->
-                            <!-- To make this form functional, sign up at-->
-                            <!-- https://startbootstrap.com/solution/contact-forms-->
-                            <!-- to get an API token!-->
-                            <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
-                                <!-- Email address input-->
-                                <div class="row">
-                                    <div class="col">
-                                        <input class="form-control" id="email" type="email" name="email" placeholder="Correo electrónico" data-sb-validations="required,email" />
-                                        <div class="invalid-feedback text-white" data-sb-feedback="email:required">El correo electrónico no puede estar vacío.</div>
-                                        <div class="invalid-feedback text-white" data-sb-feedback="email:email">Correo electrónico inválido.</div>
-                                    </div>
-                                    <div class="col-auto"><button class="btn btn-primary" id="submitButton" type="submit">Enviar</button></div>
-                                </div>
-                                <!-- Submit success message-->
-                                <!---->
-                                <!-- This is what your users will see when the form-->
-                                <!-- has successfully submitted-->
-                                <div class="d-none" id="submitSuccessMessage">
-                                    <div class="text-center mb-3"><div class="fw-bolder">Perfecto! Estaremos en contacto contigo próximamente.</div></div>
-                                </div>
-                                <!-- Submit error message-->
-                                <!---->
-                                <!-- This is what your users will see when there is-->
-                                <!-- an error submitting the form-->
-                                <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error enviando tu correo. Intenta de nuevo más tarde.</div></div>
-                            </form>
-                            <h2 class="mb-5">Sé el primero en enterarte cuando la app esté disponible!</h2>
+                            <h2 class="mb-3">
+                                Descarga NFCogos para Android desde
+                                <a href="https://play.google.com/store/apps/details?id=com.nfcogos" style="color: #ffffff">Google Play</a>
+                            </h2>
                         </div>
                     </div>
                 </div>
