Add google play icon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             </container>
                             <!-- Page heading-->
                             <h1 class="mb-5">Transparencia y control para tu negocio de cannabis</h1>
-                            <h2 class="mb-3">
+                            <h2 class="mb-3 i bi-google-play">
                                 Descarga NFCogos para Android desde
                                 <a href="https://play.google.com/store/apps/details?id=com.nfcogos" style="color: #ffffff">Google Play</a>
                             </h2>
