Add app store link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                                 Descarga NFCogos para Android desde
                                 <a href="https://play.google.com/store/apps/details?id=com.nfcogos" style="color: #ffffff">Google Play</a>
                             </h2>
+                            <h2 class="mb-3 i bi-apple">
+                                Descarga NFCogos para iPhone desde el
+                                <a href="https://apps.apple.com/uy/app/nfcogos/id6446027098" style="color: #ffffff">App Store</a>
+                            </h2>
                         </div>
                     </div>
                 </div>
