Change images, texts and colors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 <div class="logo"><image src="assets/img/logo.png" style="height: 17rem; margin-bottom: 2rem"></image></div>
                             </container>
                             <!-- Page heading-->
-                            <h1 class="mb-5">Transparencia y control para tu negocio de cannabis</h1>
+                            <h1 class="mb-5">Sistema global de trazabilidad de cannabis</h1>
                             <h2 class="mb-3 i bi-google-play">
                                 Descarga NFCogos para Android desde
                                 <a href="https://play.google.com/store/apps/details?id=com.nfcogos" style="color: #ffffff">Google Play</a>
@@ -77,7 +77,7 @@
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Compatible con la trazabilidad de tu país o región</h2>
-                        <p class="lead mb-0">Tu región ya cuenta con sus propios identificadores de plantas o lotes? No hay problema! Escanea el código de barras o QR y empieza a trabajar con ellos.</p>
+                        <p class="lead mb-0">¿Tu región ya cuenta con sus propios identificadores de plantas o lotes? ¡No hay problema! Escanea el código de barras o QR y empieza a trabajar con ellos.</p>
                     </div>
                 </div>
                 <div class="row g-0">
