--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                                 <div class="logo"><image src="assets/img/logo.png" style="height: 17rem; margin-bottom: 2rem"></image></div>
                             </container>
                             <!-- Page heading-->
-                            <h1 class="mb-5">Sistema global de trazabilidad de cannabis</h1>
+                            <h1 class="mb-5">Trazabilidad de cannabis</h1>
                             <h2 class="mb-3 i bi-google-play">
-                                Descarga NFCogos para Android desde
+                                Descarga para Android desde
                                 <a href="https://play.google.com/store/apps/details?id=com.nfcogos" style="color: #ffffff">Google Play</a>
                             </h2>
                             <h2 class="mb-3 i bi-apple">
-                                Descarga NFCogos para iPhone desde el
+                                Descarga para iPhone desde el
                                 <a href="https://apps.apple.com/uy/app/nfcogos/id6446027098" style="color: #ffffff">App Store</a>
                             </h2>
                         </div>
