--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
         <section class="showcase">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/showcase-1.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Compatible con la trazabilidad de tu país o región</h2>
                         <p class="lead mb-0">¿Tu región ya cuenta con sus propios identificadores de plantas o lotes? ¡No hay problema! Escanea el código de barras o QR y empieza a trabajar con ellos.</p>
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
+                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/showcase-2.jpg')"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Agiliza el registro de trabajo en interior y exterior</h2>
                         <p class="lead mb-0">Ubica el código QR de tus plantas y lotes en el invernadero o plantación para poder escanearlo cuando necesites obtener información y registrar acciones.</p>
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/showcase-3.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Comparte el proceso</h2>
                         <p class="lead mb-0">Comparte fotos e información de trazabilidad con tus clientes y entidades reguladoras. Además, si tus proveedores también usan NFCogos, importa esta información para contar con la historia completa de las plantas o productos derivados.</p>
@@ -102,7 +102,7 @@
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
                         <ul class="list-inline mb-2"></ul>
-                        <p class="text-muted small mb-4 mb-lg-0">&copy; NFCogos 2023. All rights reserved.</p>
+                        <p class="text-muted small mb-4 mb-lg-0">&copy; NFCogos 2024. All rights reserved.</p>
                     </div>
                     <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
