--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
                                 <div class="logo"><image src="assets/img/logo.png" style="height: 17rem; margin-bottom: 2rem"></image></div>
                             </container>
                             <!-- Page heading-->
-                            <h1 class="mb-5">Trazabilidad de cannabis</h1>
-                            <h2 class="mb-3 i bi-google-play">
-                                Descarga para Android desde
-                                <a href="https://play.google.com/store/apps/details?id=com.nfcogos" style="color: #ffffff">Google Play</a>
-                            </h2>
+                            <h1 class="mb-5">
+                                Trazabilidad de cannabis
+                                <h2 class="mb-3 i bi-google-play">
+                                    Descarga para
+                                    <a href="https://play.google.com/store/apps/details?id=com.nfcogos" style="color: #ffffff">Android</a>
+                                </h2>
+                            </h1>
                             <h2 class="mb-3 i bi-apple">
-                                Descarga para iPhone desde el
-                                <a href="https://apps.apple.com/uy/app/nfcogos/id6446027098" style="color: #ffffff">App Store</a>
+                                Descarga para
+                                <a href="https://apps.apple.com/uy/app/nfcogos/id6446027098" style="color: #ffffff">iPhone</a>
                             </h2>
                         </div>
                     </div>
