Add text about Cogoland

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <div class="row g-0">
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/showcase-3.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Comparte el proceso</h2>
-                        <p class="lead mb-0">Comparte fotos e información de trazabilidad con tus clientes y entidades reguladoras. Además, si tus proveedores también usan NFCogos, importa esta información para contar con la historia completa de las plantas o productos derivados.</p>
+                        <h2>Comparte el proceso en Cogoland</h2>
+                        <p class="lead mb-0">Comparte opcionalmente tus procesos hacia nuestra red social de cannabis: Cogoland, también disponible para Android y iOS.</p>
                     </div>
                 </div>
             </div>
